name:                findDoubles
version:             0.1.0.0
synopsis:            Helps to find files that are duplicates
homepage:            none yet
license:             GPL-3
license-file:        LICENSE
author:              Fred Dubois
maintainer:          fred.dubois@gmail.com
category:            Utility
build-type:          Simple
cabal-version:       >=1.8

executable findDoubles
  main-is:             findDoubles.hs
  build-depends:       
      base >= 3
    , bytestring
    , directory
    , filepath
    , pureMD5
    , unix

-- vim: ts=2; sts=2; sw=2; et
